arreglando conexiones feign de boleta